Fix weird bug on IE 11, for flexbox containers

--- a/src/style/components/_containers.scss
+++ b/src/style/components/_containers.scss
@@ -7,7 +7,7 @@
     flex-shrink: 1;
     flex-grow: 1;
     -ms-flex: 1;
-    -ms-flex-shrink: 1;
+    -ms-flex-shrink: 0;
     -ms-flex-grow: 1;
   }
 }
